# kroki-rs-nxt

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.devflow  Dockerfile.server-runtime  LICENSE  README.md  devflow.toml  eslint.config.cjs  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
adapters/storage/: Cargo.toml
adapters/storage/src/: lib.rs
adapters/storage/tests/: scaffold.rs
adapters/transport/: Cargo.toml
adapters/transport/src/: conversion.rs  lib.rs
adapters/transport/src/middleware/: auth.rs  circuit_breaker.rs  mod.rs  rate_limit.rs
adapters/transport/tests/: scaffold.rs
apps/cli/: Cargo.toml
apps/cli/src/: lib.rs  main.rs
apps/cli/tests/: cli_api.rs
apps/cli/tests/resources/: expected-binary-name.txt
apps/desktop/src/: package.json  tsconfig.json
apps/desktop/src/src/: index.ts
apps/desktop/src/tests/: smoke.test.js
apps/myst-plugin/: package.json
apps/myst-plugin/src/: index.ts
apps/myst-plugin/tests/: smoke.test.js
apps/server/: Cargo.toml
apps/server/src/: lib.rs  main.rs
apps/server/tests/: server_api.rs
apps/server/tests/fixtures/: server-test-config.toml
apps/server/tests/resources/: expected-root-response.txt
apps/vscode-ext/: package.json
apps/vscode-ext/src/: index.ts
apps/vscode-ext/tests/: smoke.test.js
apps/web-app/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web-app/src/: index.ts  main.ts
apps/web-app/tests/: smoke.test.js
core/plugins/: Cargo.toml
core/plugins/src/: lib.rs
core/plugins/tests/: scaffold.rs
core/sdk-rust/: Cargo.toml
core/sdk-rust/src/: capabilities.rs  config.rs  error.rs  lib.rs  ports.rs  providers.rs  services.rs  utils.rs
core/sdk-rust/src/browser/: backend.rs  manager.rs  mod.rs  native.rs
core/sdk-rust/src/utils/: font_manager.rs
core/sdk-rust/tests/: bpmn_provider.rs  d2_provider.rs  ditaa_provider.rs  excalidraw_provider.rs  graphviz_provider.rs  mermaid_provider.rs  registry.rs  vega_provider.rs  vegalite_provider.rs  wavedrom_provider.rs
core/sdk-rust/tests/fixtures/: diagram-types.txt
core/sdk-ts/: package.json
core/sdk-ts/src/: index.ts
core/sdk-ts/tests/: smoke.test.js
crates/devflow-cli/: Cargo.toml
crates/devflow-cli/src/: main.rs
docs/: abbreviations.yml  architecture.md  build-and-release.md  development-workflow.md  glossary.md  index.md  migration-from-kroki-rs.md  myst.yml  reference.md  repository-architecture.md  repository-structure.md  roadmap.md  toc.yml
docs/assets/css/: kroki-rs-nxt.css
docs/developer-guide/: index.md
docs/developer-guide/01-getting-started/: coding-conventions.md  contributing.md  quickstart.md
docs/developer-guide/02-design/: architecture.md  core-contracts.md  repository-structure.md  style-guide.md  ui-platform-and-playground.md
docs/developer-guide/02-design/adr/: adr-0001-hexagonal-architecture.md  adr-0002-monorepo-strategy.md  adr-0003-devflow-integration.md  adr-0004-wasm-bridge.md  adr-0005-ratatui-cli.md  adr-0006-test-structure-and-taxonomy.md  adr-0007-lit-ui-platform-and-vite-workspace.md  index.md
docs/developer-guide/03-development/: build-and-release.md  testing-strategy.md  workflow.md
docs/developer-guide/04-roadmap/: index.md  migration-from-kroki-rs.md  phase-3-backlog.md
docs/developer-guide/05-resources/: references.md
docs/developer-guide/06-execution/: track-1-feature-parity.md  track-2-devflow-v030.md  v010.md
docs/developer-guide/10-resources/: references.md
docs/user-guide/: configuration.md  features.md  getting-started.md  user-index.md  web-app.md
scripts/: ci-local-podman.sh  devflow-host-deps.sh  devflow-prune.sh  install-runtime-deps.sh  run-server-container.sh  run-web-app-container.sh  smoke-server.sh
shared/design-system/: package.json
shared/design-system/src/: index.ts  theme.css
shared/design-system/tests/: smoke.test.js
tools/: devflow-ext-host-deps.mjs  devflow-ext-node.mjs
