[package]
name = "kroki-adapter-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transport adapter implementations (HTTP/Axum, IPC, CLI dispatch)"

[dependencies]
kroki-core = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
