[package]
name = "kroki-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP API server for the kroki diagram platform (Axum)"

[[bin]]
name = "kroki-server"
path = "src/main.rs"

[dependencies]
kroki-core = { workspace = true }
kroki-plugins = { workspace = true }
kroki-adapter-storage = { workspace = true }
kroki-adapter-transport = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
