[package]
name = "kroki-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin discovery, loading, and lifecycle management for kroki"

[dependencies]
kroki-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
