[package]
name = "kroki-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain logic, traits, and providers for the kroki diagram platform"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
which = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
tokio = { workspace = true }
resvg = { workspace = true }
image = { workspace = true }
num_cpus = { workspace = true }
tempfile = { workspace = true }
dashmap = { workspace = true }

[features]
default = []
native-browser = []
